tdf#143268 Fix slow response after Navigator fills table members

when document has many tables

Change-Id: Iccf34700a3f09420f3dc3519b04351c53d1d59b5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/122416
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>